# m

./: .gitignore  model.h5  testCNN.py  testimgCNN.py
pose_estimation/: LICENSE.md  README.md
pose_estimation/models/: YOLO_v8_medium_pose_640_640_3_onnx_post.onnx
pose_estimation/src/cpp/: CMakeLists.txt  poseEstimation.cpp
pose_estimation/src/python/: run_pose_estimation.py
pose_extraction/: data_extraction.py  data_extraction_memFramwork.py
